2012-03-22  Eric Seidel  <eric@webkit.org>

        Make svn-apply re-write JavaScriptCore/wtf to WTF/wtf
        https://bugs.webkit.org/show_bug.cgi?id=81984

        Reviewed by Adam Barth.

        * Scripts/VCSUtils.pm:
        (adjustPathForRecentRenamings):

2012-03-22  Raphael Kubo da Costa  <rakuco@FreeBSD.org>

        [CMake] Fix build-jsc after r111778 and r111797.
        https://bugs.webkit.org/show_bug.cgi?id=82001

        Reviewed by Filip Pizlo.

        Contrary to the comment in build-jsc, buildCMakeProjectOrExit()
        does return if no error occurred, and build-jsc failed with
        "building not defined for this platform".

        * Scripts/build-jsc: Always exit after caling
        buildCMakeProjectOrExit().
        * Scripts/webkitdirs.pm:
        (buildCMakeProjectOrExit): Return 0 if no error occurred.

2012-03-22  Raphael Kubo da Costa  <rakuco@FreeBSD.org>

        [CMake] Unreviewed build fix after r111778.

        * DumpRenderTree/efl/CMakeLists.txt: Replace
        ${JAVASCRIPTCORE_DIR}/wtf with ${WTF_DIR}/wtf in the include
        paths.
        * DumpRenderTree/efl/LayoutTestControllerEfl.cpp: Use the right
        wtf include.
        * DumpRenderTree/efl/WorkQueueItemEfl.cpp: Ditto.
        * WinCELauncher/CMakeLists.txt: Replace ${JAVASCRIPTCORE_DIR}/wtf
        with ${WTF_DIR}/wtf in the include paths.

2012-03-22  Filip Pizlo  <fpizlo@apple.com>

        Tools/Scripts/build-jsc doesn't work after WTF move
        https://bugs.webkit.org/show_bug.cgi?id=81999

        Reviewed by Eric Seidel.
        
        For ports that require WTF and JSC to be built as two projects and where
        the machinery to build both does not already exist, teach the tool to do
        so for us.

        * Scripts/build-jsc:
        (buildMyProject):

2012-03-22  Ojan Vafai  <ojan@chromium.org>

        Fix accidental missing line in r111793.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/base.js: